--- a/order/Dockerfile
+++ b/order/Dockerfile
@@ -6,6 +6,8 @@ COPY ./requirements.txt .
 
 RUN pip install -r requirements.txt
 
+RUN apt-get update && \
+    apt-get install -y curl
 COPY . .
 
 EXPOSE 5000
